Fix text-align responsiveness - meet the team

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -87,3 +87,10 @@ a:-webkit-any-link {
 .fs-90 {
     font-size: 90%;
 }
+
+/* Medium devices (tablets, 768px and up) */
+@media (min-width: 768px) {
+    .text-end-md {
+        text-align: right;
+    }
+}
